# django-security-keys

./: .gitignore  CHANGELOG.md  CHANGELOG.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: codeql.yml  tests.yml
Ctl/: config.yaml  tmplvars.yaml
docs/: missing-features.md  quickstart.md  settings.md  webauthn.md
src/django_security_keys/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
src/django_security_keys/ext/two_factor/: forms.py  views.py
src/django_security_keys/migrations/: 0001_initial.py  0002_attestation.py  0003_date_fields.py
src/django_security_keys/static/django-security-keys/: django-security-keys.js
src/django_security_keys/templates/django-security-keys/: base.html  init.html  login.html  manage-keys.html  static-includes.html
src/django_security_keys/templates/registration/: base.html  login.html
src/django_security_keys/templatetags/: two_factor_ext.py  util.py
tests/: conftest.py  fixtures.py  test_models.py  test_views.py
tests/project/: settings.py  urls.py
tests/project/templates/two_factor/: _base.html
tests/project/templates/two_factor/core/: login.html
