[tool.poetry]
name = "django-security-keys"
version = "1.0.1.1"
description = "Django webauthn security key integration"
readme = "README.md"
repository = "https://github.com/fullctl/django-security-keys"
authors = [ "20C <code@20c.com>",]
license = "Apache-2"
classifiers = [
  "Topic :: Software Development", 
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License", 
  "Programming Language :: Python :: 3.8", 
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "django_security_keys", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
webauthn = "^1"

# requirements for 2FA
django-two-factor-auth = "^1.13.1"
phonenumbers = "^8.12.47"

[tool.poetry.dev-dependencies]
# testing
tox = ">=3"
tox-gh-actions = ">=2"
codecov = ">=2"
coverage = ">=5"
pytest = ">=6"
pytest-django = ">=3.8"
pytest-cov = "*"

# linting
black = ">=20"
isort = ">=5.7"
flake8 = ">=3.8"
mypy = ">=0.950"
pre-commit = ">=2.13"
pyupgrade = ">=2.19"

# docs
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.2.3"

# ctl
ctl = ">=1"
jinja2 = ">=2"
tmpl = ">=1"
# v4 released 2022-03-31
twine = "^3.3.0"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

