[tool.poetry]
name = "django-security-keys"
version = "1.1.0"
description = "Django webauthn security key integration"
readme = "README.md"
repository = "https://github.com/fullctl/django-security-keys"
authors = [ "20C <code@20c.com>",]
license = "Apache-2"
classifiers = [
  "Topic :: Software Development", 
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License", 
  "Programming Language :: Python :: 3.8", 
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "django_security_keys", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
webauthn = "^1"

# requirements for 2FA
django-two-factor-auth = "^1.13.1"
phonenumbers = "^8.12.47"

[tool.poetry.dev-dependencies]
# testing
pytest = ">=6.0.1"
pytest-django = ">=3.8.0"
pytest-cov = "*"
pytest-pythonpath = "*"
tox = ">=3.24"
tox-gh-actions = ">=2.9.1"

# linting
black = { version = ">=20", allow-prereleases = true }
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = ">=0.950"
pre-commit = "^2.13"
pyupgrade = "^2.19.4"

# ctl
ctl = "^1"
jinja2 = "^3.1.2"
tmpl = "^1"
twine = "^3.3.0"

# docs
markdown-include = ">=0.5"
mkdocs = "^1.2.3"
pymdgen = "^1.0.0"


[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

